--- a/Interfaces/agregarYEditarVentas/editarVenta.html
+++ b/Interfaces/agregarYEditarVentas/editarVenta.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/CSS/styleVentas.css">
+    <link rel="stylesheet" href="CSS/styleVentas.css">
 </head>
 <body>
     <header>
         <h1>EDITAR VENTA</h1>
-        <img src="/IMG/editar.svg" class="imgTitulo">
+        <img src="IMG/editar.svg" class="imgTitulo">
     </header>
     <section class="container">
         <form action="">
